# sewerhash-rs

./: CONTRIBUTING.MD  Cargo.toml  README.MD  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
benches/my_benchmark/: hashes.rs  main.rs
docs/: index.md
src/: lib.rs
src/implementations/binary/: sewerhash_nonvector_64.rs
