[package]
name = "sewerhash-rs"
version = "0.1.0"
edition = "2021"
description = "A custom vectorised variant of FNV-1a, extremely fast hash implemethat trades a bit of quality for a lot of speed."
repository = "https://github.com/Sewer56/sewerhash-rs"
license-file = "LICENSE"
include = ["src/**/*"]

[toolchain]
channel = "nightly"

[dev-dependencies]
criterion = "0.5.1"
ahash = "0.8.6"

[target.'cfg(unix)'.dev-dependencies]
pprof = { version = "0.12", features = ["flamegraph", "criterion"] }

# Profile Build
[profile.profile]
inherits = "release"
debug = true
codegen-units = 1
lto = true
strip = false  # No stripping!!
panic = "abort"

# Dev Build
[profile.dev]
panic = "abort"

# Optimized Release Build
[profile.release]
codegen-units = 1
lto = true
strip = true  # Automatically strip symbols from the binary.
panic = "abort"

# Benchmark Stuff
[[bench]]
name = "my_benchmark"
harness = false